# welding-defect-detection

./: .gitignore  CMakeLists.txt  README.md  config.json  config.json.example  run.bat
docs/: development-log-2026-07-17-phase2.md  gradle-handoff-checklist.md  portfolio-weldvision-section.md  yolo-pilot-training-2026-07-21.md
phase2/: .gitignore  README.md  gradio_app.py  prepare_balanced_yolo_split.py  prepare_yolo_dataset.py  preview_yolo_dataset.py  requirements.txt  rules.py  smoke_test.py  test_prepare_balanced_yolo_split.py  test_prepare_yolo_dataset.py  train_yolo.py  vision.py
src/: main.cpp  visualize.py
